microservices/session3/infra/k8s/completedtask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: completedtask
  labels:
    app: completedtask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: completedtask
  template:
    metadata:
      labels:
        app: completedtask
    spec:
      containers:
      - name: completedtask
        image: us.gcr.io/lucid-splicer-312307/completedtask #cparkhi16/bcomment
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: completedtask-service
spec:
  selector:
    app: completedtask
  ports:
  - protocol: TCP
    port: 4002
    targetPort: 4002
