microservices/session3/infra/k8s/todotask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todotask
  labels:
    app: todotask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todotask
  template:
    metadata:
      labels:
        app: todotask
    spec:
      containers:
      - name: todotask
        image: us.gcr.io/lucid-splicer-312307/todotask #cparkhi16/bpost
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: todotask-service
spec:
  selector:
    app: todotask
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001
