microservices/session3/infra/k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: us.gcr.io/lucid-splicer-312307/user #cparkhi16/bpost
        ports:
        - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
  - protocol: TCP
    port: 4006
    targetPort: 4006
