microservices/session3/infra/k8s/ingress_serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: chinmay.com #posts.com
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/gettasks/?(.*)
        backend:
          service:
            name: query-service
            port: 
              number: 4003
      - pathType: Prefix
        path: /api/v1/login
        backend:
          service:
            name: user-service
            port: 
              number: 4006
      - pathType: Prefix
        path: /api/v1/generateToken
        backend:
          service:
            name: todotask-service
            port: 
              number: 4001
      - pathType: Prefix
        path: /api/v1/task
        backend:
          service:
            name: todotask-service
            port: 
              number: 4001
      - pathType: Prefix
        path: /api/v1/tasks/?(.*) 
        backend:
          service:
            name: todotask-service
            port: 
              number: 4001
      - pathType: Prefix
        path: /api/v1/completed/tasks/?(.*) 
        backend:
          service:
            name: completedtask-service
            port: 
              number: 4002
      - pathType: Prefix
        path: /api/v1/completed/gettasks/?(.*)
        backend:
          service:
            name: query-service
            port: 
              number: 4003
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: ui-service
            port: 
              number: 3000
